# StateFlow

./: CMakeLists.txt  README.md  end_ab.fsm  end_ab.nfa.fsm
src/: CMakeLists.txt  animation.c  defines.h  editor.c  main.c  menu.c  splash_screen.c  stateflow.c  stateflow.h
src/utils/: CMakeLists.txt  button.c  button.h  checkbox.c  checkbox.h  darray.c  darray.h  dfa.c  dfa.h  funcs.c  funcs.h  input.c  input.h  nfa.c  nfa.h  node.c  node.h  node_selector.c  node_selector.h  strops.c  strops.h  text.c  text.h  tline.c  tline.h
